navbar on mobile fix

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,11 @@
   to { transform: rotate(360deg); }
 }
 
+
+
+.navbar-menu.is-active {
+  background: rgba(0, 0, 0, 1);
+  display: block;
+  position: absolute;
+  z-index: 9999;
+}
